lftc/lab5/parser.output
State 79 conflicts: 1 shift/reduce


Grammar

    0 $accept: program "end of file"

    1 program: decllist
    2        | cmpdstmt
    3        | decllist program
    4        | cmpdstmt program

    5 decllist: declaration

    6 declaration: type "identifier" ";"
    7            | type "identifier" "=" expr ";"
    8            | type "identifier" "=" identifierstruct ";"
    9            | structdecl ";"

   10 structdecl: "struct" "{" decllist "}"

   11 assignstmt: identifierstruct "=" expr

   12 type: "intt"
   13     | "chart"
   14     | "stringt"

   15 identifierstruct: "identifier"
   16                 | identifierstruct "->" "identifier"

   17 condition: expr relation expr

   18 relation: "<"
   19         | "<="
   20         | "=="
   21         | ">="
   22         | ">"
   23         | "!="

   24 iostmt: "cin" ">>" identifierstruct
   25       | "cout" "<<" expr

   26 ifstmt: "if" "(" condition ")" "{" cmpdstmt "}"
   27       | "if" "(" condition ")" "{" cmpdstmt "}" "else" "{" cmpdstmt "}"

   28 cmpdstmt: assignstmt ";"
   29         | iostmt ";"
   30         | ifstmt ";"
   31         | whilestmt ";"
   32         | forstmt ";"
   33         | cmpdstmt ";" assignstmt
   34         | cmpdstmt ";" iostmt
   35         | cmpdstmt ";" ifstmt
   36         | cmpdstmt ";" whilestmt
   37         | cmpdstmt ";" forstmt

   38 whilestmt: "while" "(" condition ")" "{" cmpdstmt "}"

   39 forstmt: "for" "(" decllist condition ";" cmpdstmt ")" "{" cmpdstmt "}"

   40 expr: "number"
   41     | "string"
   42     | identifierstruct
   43     | "char"
   44     | expr "+" expr
   45     | expr "-" expr
   46     | expr "*" expr
   47     | expr "/" expr
   48     | "(" expr ")"


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    "=" (258) 7 8 11
    "-" (259) 45
    "+" (260) 44
    "*" (261) 46
    "/" (262) 47
    "(" (263) 26 27 38 39 48
    ")" (264) 26 27 38 39 48
    "{" (265) 10 26 27 38 39
    "}" (266) 10 26 27 38 39
    ">>" (267) 24
    "<<" (268) 25
    "->" (269) 16
    ";" (270) 6 7 8 9 28 29 30 31 32 33 34 35 36 37 39
    "for" (271) 39
    "cin" (272) 24
    "cout" (273) 25
    "if" (274) 26 27
    "else" (275) 27
    "while" (276) 38
    "struct" (277) 10
    "stringt" (278) 14
    "intt" (279) 12
    "chart" (280) 13
    "<" (281) 18
    ">" (282) 22
    "==" (283) 20
    "<=" (284) 19
    ">=" (285) 21
    "!=" (286) 23
    "identifier" <std::string> (287) 6 7 8 15 16
    "number" <int> (288) 40
    "string" <std::string> (289) 41
    "char" <std::string> (290) 43


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    program (37)
        on left: 1 2 3 4
        on right: 0 3 4
    decllist (38)
        on left: 5
        on right: 1 3 10 39
    declaration (39)
        on left: 6 7 8 9
        on right: 5
    structdecl (40)
        on left: 10
        on right: 9
    assignstmt (41)
        on left: 11
        on right: 28 33
    type (42)
        on left: 12 13 14
        on right: 6 7 8
    identifierstruct (43)
        on left: 15 16
        on right: 8 11 16 24 42
    condition (44)
        on left: 17
        on right: 26 27 38 39
    relation (45)
        on left: 18 19 20 21 22 23
        on right: 17
    iostmt (46)
        on left: 24 25
        on right: 29 34
    ifstmt (47)
        on left: 26 27
        on right: 30 35
    cmpdstmt (48)
        on left: 28 29 30 31 32 33 34 35 36 37
        on right: 2 4 26 27 33 34 35 36 37 38 39
    whilestmt (49)
        on left: 38
        on right: 31 36
    forstmt (50)
        on left: 39
        on right: 32 37
    expr (51)
        on left: 40 41 42 43 44 45 46 47 48
        on right: 7 11 17 25 44 45 46 47 48


State 0

    0 $accept: . program "end of file"

    "for"         shift, and go to state 1
    "cin"         shift, and go to state 2
    "cout"        shift, and go to state 3
    "if"          shift, and go to state 4
    "while"       shift, and go to state 5
    "struct"      shift, and go to state 6
    "stringt"     shift, and go to state 7
    "intt"        shift, and go to state 8
    "chart"       shift, and go to state 9
    "identifier"  shift, and go to state 10

    program           go to state 11
    decllist          go to state 12
    declaration       go to state 13
    structdecl        go to state 14
    assignstmt        go to state 15
    type              go to state 16
    identifierstruct  go to state 17
    iostmt            go to state 18
    ifstmt            go to state 19
    cmpdstmt          go to state 20
    whilestmt         go to state 21
    forstmt           go to state 22


State 1

   39 forstmt: "for" . "(" decllist condition ";" cmpdstmt ")" "{" cmpdstmt "}"

    "("  shift, and go to state 23


State 2

   24 iostmt: "cin" . ">>" identifierstruct

    ">>"  shift, and go to state 24


State 3

   25 iostmt: "cout" . "<<" expr

    "<<"  shift, and go to state 25


State 4

   26 ifstmt: "if" . "(" condition ")" "{" cmpdstmt "}"
   27       | "if" . "(" condition ")" "{" cmpdstmt "}" "else" "{" cmpdstmt "}"

    "("  shift, and go to state 26


State 5

   38 whilestmt: "while" . "(" condition ")" "{" cmpdstmt "}"

    "("  shift, and go to state 27


State 6

   10 structdecl: "struct" . "{" decllist "}"

    "{"  shift, and go to state 28


State 7

   14 type: "stringt" .

    $default  reduce using rule 14 (type)


State 8

   12 type: "intt" .

    $default  reduce using rule 12 (type)


State 9

   13 type: "chart" .

    $default  reduce using rule 13 (type)


State 10

   15 identifierstruct: "identifier" .

    $default  reduce using rule 15 (identifierstruct)


State 11

    0 $accept: program . "end of file"

    "end of file"  shift, and go to state 29


State 12

    1 program: decllist .
    3        | decllist . program

    "for"         shift, and go to state 1
    "cin"         shift, and go to state 2
    "cout"        shift, and go to state 3
    "if"          shift, and go to state 4
    "while"       shift, and go to state 5
    "struct"      shift, and go to state 6
    "stringt"     shift, and go to state 7
    "intt"        shift, and go to state 8
    "chart"       shift, and go to state 9
    "identifier"  shift, and go to state 10

    $default  reduce using rule 1 (program)

    program           go to state 30
    decllist          go to state 12
    declaration       go to state 13
    structdecl        go to state 14
    assignstmt        go to state 15
    type              go to state 16
    identifierstruct  go to state 17
    iostmt            go to state 18
    ifstmt            go to state 19
    cmpdstmt          go to state 20
    whilestmt         go to state 21
    forstmt           go to state 22


State 13

    5 decllist: declaration .

    $default  reduce using rule 5 (decllist)


State 14

    9 declaration: structdecl . ";"

    ";"  shift, and go to state 31


State 15

   28 cmpdstmt: assignstmt . ";"

    ";"  shift, and go to state 32


State 16

    6 declaration: type . "identifier" ";"
    7            | type . "identifier" "=" expr ";"
    8            | type . "identifier" "=" identifierstruct ";"

    "identifier"  shift, and go to state 33


State 17

   11 assignstmt: identifierstruct . "=" expr
   16 identifierstruct: identifierstruct . "->" "identifier"

    "="   shift, and go to state 34
    "->"  shift, and go to state 35


State 18

   29 cmpdstmt: iostmt . ";"

    ";"  shift, and go to state 36


State 19

   30 cmpdstmt: ifstmt . ";"

    ";"  shift, and go to state 37


State 20

    2 program: cmpdstmt .
    4        | cmpdstmt . program
   33 cmpdstmt: cmpdstmt . ";" assignstmt
   34         | cmpdstmt . ";" iostmt
   35         | cmpdstmt . ";" ifstmt
   36         | cmpdstmt . ";" whilestmt
   37         | cmpdstmt . ";" forstmt

    ";"           shift, and go to state 38
    "for"         shift, and go to state 1
    "cin"         shift, and go to state 2
    "cout"        shift, and go to state 3
    "if"          shift, and go to state 4
    "while"       shift, and go to state 5
    "struct"      shift, and go to state 6
    "stringt"     shift, and go to state 7
    "intt"        shift, and go to state 8
    "chart"       shift, and go to state 9
    "identifier"  shift, and go to state 10

    $default  reduce using rule 2 (program)

    program           go to state 39
    decllist          go to state 12
    declaration       go to state 13
    structdecl        go to state 14
    assignstmt        go to state 15
    type              go to state 16
    identifierstruct  go to state 17
    iostmt            go to state 18
    ifstmt            go to state 19
    cmpdstmt          go to state 20
    whilestmt         go to state 21
    forstmt           go to state 22


State 21

   31 cmpdstmt: whilestmt . ";"

    ";"  shift, and go to state 40


State 22

   32 cmpdstmt: forstmt . ";"

    ";"  shift, and go to state 41


State 23

   39 forstmt: "for" "(" . decllist condition ";" cmpdstmt ")" "{" cmpdstmt "}"

    "struct"   shift, and go to state 6
    "stringt"  shift, and go to state 7
    "intt"     shift, and go to state 8
    "chart"    shift, and go to state 9

    decllist     go to state 42
    declaration  go to state 13
    structdecl   go to state 14
    type         go to state 16


State 24

   24 iostmt: "cin" ">>" . identifierstruct

    "identifier"  shift, and go to state 10

    identifierstruct  go to state 43


State 25

   25 iostmt: "cout" "<<" . expr

    "("           shift, and go to state 44
    "identifier"  shift, and go to state 10
    "number"      shift, and go to state 45
    "string"      shift, and go to state 46
    "char"        shift, and go to state 47

    identifierstruct  go to state 48
    expr              go to state 49


State 26

   26 ifstmt: "if" "(" . condition ")" "{" cmpdstmt "}"
   27       | "if" "(" . condition ")" "{" cmpdstmt "}" "else" "{" cmpdstmt "}"

    "("           shift, and go to state 44
    "identifier"  shift, and go to state 10
    "number"      shift, and go to state 45
    "string"      shift, and go to state 46
    "char"        shift, and go to state 47

    identifierstruct  go to state 48
    condition         go to state 50
    expr              go to state 51


State 27

   38 whilestmt: "while" "(" . condition ")" "{" cmpdstmt "}"

    "("           shift, and go to state 44
    "identifier"  shift, and go to state 10
    "number"      shift, and go to state 45
    "string"      shift, and go to state 46
    "char"        shift, and go to state 47

    identifierstruct  go to state 48
    condition         go to state 52
    expr              go to state 51


State 28

   10 structdecl: "struct" "{" . decllist "}"

    "struct"   shift, and go to state 6
    "stringt"  shift, and go to state 7
    "intt"     shift, and go to state 8
    "chart"    shift, and go to state 9

    decllist     go to state 53
    declaration  go to state 13
    structdecl   go to state 14
    type         go to state 16


State 29

    0 $accept: program "end of file" .

    $default  accept


State 30

    3 program: decllist program .

    $default  reduce using rule 3 (program)


State 31

    9 declaration: structdecl ";" .

    $default  reduce using rule 9 (declaration)


State 32

   28 cmpdstmt: assignstmt ";" .

    $default  reduce using rule 28 (cmpdstmt)


State 33

    6 declaration: type "identifier" . ";"
    7            | type "identifier" . "=" expr ";"
    8            | type "identifier" . "=" identifierstruct ";"

    "="  shift, and go to state 54
    ";"  shift, and go to state 55


State 34

   11 assignstmt: identifierstruct "=" . expr

    "("           shift, and go to state 44
    "identifier"  shift, and go to state 10
    "number"      shift, and go to state 45
    "string"      shift, and go to state 46
    "char"        shift, and go to state 47

    identifierstruct  go to state 48
    expr              go to state 56


State 35

   16 identifierstruct: identifierstruct "->" . "identifier"

    "identifier"  shift, and go to state 57


State 36

   29 cmpdstmt: iostmt ";" .

    $default  reduce using rule 29 (cmpdstmt)


State 37

   30 cmpdstmt: ifstmt ";" .

    $default  reduce using rule 30 (cmpdstmt)


State 38

   33 cmpdstmt: cmpdstmt ";" . assignstmt
   34         | cmpdstmt ";" . iostmt
   35         | cmpdstmt ";" . ifstmt
   36         | cmpdstmt ";" . whilestmt
   37         | cmpdstmt ";" . forstmt

    "for"         shift, and go to state 1
    "cin"         shift, and go to state 2
    "cout"        shift, and go to state 3
    "if"          shift, and go to state 4
    "while"       shift, and go to state 5
    "identifier"  shift, and go to state 10

    assignstmt        go to state 58
    identifierstruct  go to state 17
    iostmt            go to state 59
    ifstmt            go to state 60
    whilestmt         go to state 61
    forstmt           go to state 62


State 39

    4 program: cmpdstmt program .

    $default  reduce using rule 4 (program)


State 40

   31 cmpdstmt: whilestmt ";" .

    $default  reduce using rule 31 (cmpdstmt)


State 41

   32 cmpdstmt: forstmt ";" .

    $default  reduce using rule 32 (cmpdstmt)


State 42

   39 forstmt: "for" "(" decllist . condition ";" cmpdstmt ")" "{" cmpdstmt "}"

    "("           shift, and go to state 44
    "identifier"  shift, and go to state 10
    "number"      shift, and go to state 45
    "string"      shift, and go to state 46
    "char"        shift, and go to state 47

    identifierstruct  go to state 48
    condition         go to state 63
    expr              go to state 51


State 43

   16 identifierstruct: identifierstruct . "->" "identifier"
   24 iostmt: "cin" ">>" identifierstruct .

    "->"  shift, and go to state 35

    $default  reduce using rule 24 (iostmt)


State 44

   48 expr: "(" . expr ")"

    "("           shift, and go to state 44
    "identifier"  shift, and go to state 10
    "number"      shift, and go to state 45
    "string"      shift, and go to state 46
    "char"        shift, and go to state 47

    identifierstruct  go to state 48
    expr              go to state 64


State 45

   40 expr: "number" .

    $default  reduce using rule 40 (expr)


State 46

   41 expr: "string" .

    $default  reduce using rule 41 (expr)


State 47

   43 expr: "char" .

    $default  reduce using rule 43 (expr)


State 48

   16 identifierstruct: identifierstruct . "->" "identifier"
   42 expr: identifierstruct .

    "->"  shift, and go to state 35

    $default  reduce using rule 42 (expr)


State 49

   25 iostmt: "cout" "<<" expr .
   44 expr: expr . "+" expr
   45     | expr . "-" expr
   46     | expr . "*" expr
   47     | expr . "/" expr

    "-"  shift, and go to state 65
    "+"  shift, and go to state 66
    "*"  shift, and go to state 67
    "/"  shift, and go to state 68

    $default  reduce using rule 25 (iostmt)


State 50

   26 ifstmt: "if" "(" condition . ")" "{" cmpdstmt "}"
   27       | "if" "(" condition . ")" "{" cmpdstmt "}" "else" "{" cmpdstmt "}"

    ")"  shift, and go to state 69


State 51

   17 condition: expr . relation expr
   44 expr: expr . "+" expr
   45     | expr . "-" expr
   46     | expr . "*" expr
   47     | expr . "/" expr

    "-"   shift, and go to state 65
    "+"   shift, and go to state 66
    "*"   shift, and go to state 67
    "/"   shift, and go to state 68
    "<"   shift, and go to state 70
    ">"   shift, and go to state 71
    "=="  shift, and go to state 72
    "<="  shift, and go to state 73
    ">="  shift, and go to state 74
    "!="  shift, and go to state 75

    relation  go to state 76


State 52

   38 whilestmt: "while" "(" condition . ")" "{" cmpdstmt "}"

    ")"  shift, and go to state 77


State 53

   10 structdecl: "struct" "{" decllist . "}"

    "}"  shift, and go to state 78


State 54

    7 declaration: type "identifier" "=" . expr ";"
    8            | type "identifier" "=" . identifierstruct ";"

    "("           shift, and go to state 44
    "identifier"  shift, and go to state 10
    "number"      shift, and go to state 45
    "string"      shift, and go to state 46
    "char"        shift, and go to state 47

    identifierstruct  go to state 79
    expr              go to state 80


State 55

    6 declaration: type "identifier" ";" .

    $default  reduce using rule 6 (declaration)


State 56

   11 assignstmt: identifierstruct "=" expr .
   44 expr: expr . "+" expr
   45     | expr . "-" expr
   46     | expr . "*" expr
   47     | expr . "/" expr

    "-"  shift, and go to state 65
    "+"  shift, and go to state 66
    "*"  shift, and go to state 67
    "/"  shift, and go to state 68

    $default  reduce using rule 11 (assignstmt)


State 57

   16 identifierstruct: identifierstruct "->" "identifier" .

    $default  reduce using rule 16 (identifierstruct)


State 58

   33 cmpdstmt: cmpdstmt ";" assignstmt .

    $default  reduce using rule 33 (cmpdstmt)


State 59

   34 cmpdstmt: cmpdstmt ";" iostmt .

    $default  reduce using rule 34 (cmpdstmt)


State 60

   35 cmpdstmt: cmpdstmt ";" ifstmt .

    $default  reduce using rule 35 (cmpdstmt)


State 61

   36 cmpdstmt: cmpdstmt ";" whilestmt .

    $default  reduce using rule 36 (cmpdstmt)


State 62

   37 cmpdstmt: cmpdstmt ";" forstmt .

    $default  reduce using rule 37 (cmpdstmt)


State 63

   39 forstmt: "for" "(" decllist condition . ";" cmpdstmt ")" "{" cmpdstmt "}"

    ";"  shift, and go to state 81


State 64

   44 expr: expr . "+" expr
   45     | expr . "-" expr
   46     | expr . "*" expr
   47     | expr . "/" expr
   48     | "(" expr . ")"

    "-"  shift, and go to state 65
    "+"  shift, and go to state 66
    "*"  shift, and go to state 67
    "/"  shift, and go to state 68
    ")"  shift, and go to state 82


State 65

   45 expr: expr "-" . expr

    "("           shift, and go to state 44
    "identifier"  shift, and go to state 10
    "number"      shift, and go to state 45
    "string"      shift, and go to state 46
    "char"        shift, and go to state 47

    identifierstruct  go to state 48
    expr              go to state 83


State 66

   44 expr: expr "+" . expr

    "("           shift, and go to state 44
    "identifier"  shift, and go to state 10
    "number"      shift, and go to state 45
    "string"      shift, and go to state 46
    "char"        shift, and go to state 47

    identifierstruct  go to state 48
    expr              go to state 84


State 67

   46 expr: expr "*" . expr

    "("           shift, and go to state 44
    "identifier"  shift, and go to state 10
    "number"      shift, and go to state 45
    "string"      shift, and go to state 46
    "char"        shift, and go to state 47

    identifierstruct  go to state 48
    expr              go to state 85


State 68

   47 expr: expr "/" . expr

    "("           shift, and go to state 44
    "identifier"  shift, and go to state 10
    "number"      shift, and go to state 45
    "string"      shift, and go to state 46
    "char"        shift, and go to state 47

    identifierstruct  go to state 48
    expr              go to state 86


State 69

   26 ifstmt: "if" "(" condition ")" . "{" cmpdstmt "}"
   27       | "if" "(" condition ")" . "{" cmpdstmt "}" "else" "{" cmpdstmt "}"

    "{"  shift, and go to state 87


State 70

   18 relation: "<" .

    $default  reduce using rule 18 (relation)


State 71

   22 relation: ">" .

    $default  reduce using rule 22 (relation)


State 72

   20 relation: "==" .

    $default  reduce using rule 20 (relation)


State 73

   19 relation: "<=" .

    $default  reduce using rule 19 (relation)


State 74

   21 relation: ">=" .

    $default  reduce using rule 21 (relation)


State 75

   23 relation: "!=" .

    $default  reduce using rule 23 (relation)


State 76

   17 condition: expr relation . expr

    "("           shift, and go to state 44
    "identifier"  shift, and go to state 10
    "number"      shift, and go to state 45
    "string"      shift, and go to state 46
    "char"        shift, and go to state 47

    identifierstruct  go to state 48
    expr              go to state 88


State 77

   38 whilestmt: "while" "(" condition ")" . "{" cmpdstmt "}"

    "{"  shift, and go to state 89


State 78

   10 structdecl: "struct" "{" decllist "}" .

    $default  reduce using rule 10 (structdecl)


State 79

    8 declaration: type "identifier" "=" identifierstruct . ";"
   16 identifierstruct: identifierstruct . "->" "identifier"
   42 expr: identifierstruct .

    "->"  shift, and go to state 35
    ";"   shift, and go to state 90

    ";"       [reduce using rule 42 (expr)]
    $default  reduce using rule 42 (expr)


State 80

    7 declaration: type "identifier" "=" expr . ";"
   44 expr: expr . "+" expr
   45     | expr . "-" expr
   46     | expr . "*" expr
   47     | expr . "/" expr

    "-"  shift, and go to state 65
    "+"  shift, and go to state 66
    "*"  shift, and go to state 67
    "/"  shift, and go to state 68
    ";"  shift, and go to state 91


State 81

   39 forstmt: "for" "(" decllist condition ";" . cmpdstmt ")" "{" cmpdstmt "}"

    "for"         shift, and go to state 1
    "cin"         shift, and go to state 2
    "cout"        shift, and go to state 3
    "if"          shift, and go to state 4
    "while"       shift, and go to state 5
    "identifier"  shift, and go to state 10

    assignstmt        go to state 15
    identifierstruct  go to state 17
    iostmt            go to state 18
    ifstmt            go to state 19
    cmpdstmt          go to state 92
    whilestmt         go to state 21
    forstmt           go to state 22


State 82

   48 expr: "(" expr ")" .

    $default  reduce using rule 48 (expr)


State 83

   44 expr: expr . "+" expr
   45     | expr . "-" expr
   45     | expr "-" expr .
   46     | expr . "*" expr
   47     | expr . "/" expr

    "*"  shift, and go to state 67
    "/"  shift, and go to state 68

    $default  reduce using rule 45 (expr)


State 84

   44 expr: expr . "+" expr
   44     | expr "+" expr .
   45     | expr . "-" expr
   46     | expr . "*" expr
   47     | expr . "/" expr

    "*"  shift, and go to state 67
    "/"  shift, and go to state 68

    $default  reduce using rule 44 (expr)


State 85

   44 expr: expr . "+" expr
   45     | expr . "-" expr
   46     | expr . "*" expr
   46     | expr "*" expr .
   47     | expr . "/" expr

    $default  reduce using rule 46 (expr)


State 86

   44 expr: expr . "+" expr
   45     | expr . "-" expr
   46     | expr . "*" expr
   47     | expr . "/" expr
   47     | expr "/" expr .

    $default  reduce using rule 47 (expr)


State 87

   26 ifstmt: "if" "(" condition ")" "{" . cmpdstmt "}"
   27       | "if" "(" condition ")" "{" . cmpdstmt "}" "else" "{" cmpdstmt "}"

    "for"         shift, and go to state 1
    "cin"         shift, and go to state 2
    "cout"        shift, and go to state 3
    "if"          shift, and go to state 4
    "while"       shift, and go to state 5
    "identifier"  shift, and go to state 10

    assignstmt        go to state 15
    identifierstruct  go to state 17
    iostmt            go to state 18
    ifstmt            go to state 19
    cmpdstmt          go to state 93
    whilestmt         go to state 21
    forstmt           go to state 22


State 88

   17 condition: expr relation expr .
   44 expr: expr . "+" expr
   45     | expr . "-" expr
   46     | expr . "*" expr
   47     | expr . "/" expr

    "-"  shift, and go to state 65
    "+"  shift, and go to state 66
    "*"  shift, and go to state 67
    "/"  shift, and go to state 68

    $default  reduce using rule 17 (condition)


State 89

   38 whilestmt: "while" "(" condition ")" "{" . cmpdstmt "}"

    "for"         shift, and go to state 1
    "cin"         shift, and go to state 2
    "cout"        shift, and go to state 3
    "if"          shift, and go to state 4
    "while"       shift, and go to state 5
    "identifier"  shift, and go to state 10

    assignstmt        go to state 15
    identifierstruct  go to state 17
    iostmt            go to state 18
    ifstmt            go to state 19
    cmpdstmt          go to state 94
    whilestmt         go to state 21
    forstmt           go to state 22


State 90

    8 declaration: type "identifier" "=" identifierstruct ";" .

    $default  reduce using rule 8 (declaration)


State 91

    7 declaration: type "identifier" "=" expr ";" .

    $default  reduce using rule 7 (declaration)


State 92

   33 cmpdstmt: cmpdstmt . ";" assignstmt
   34         | cmpdstmt . ";" iostmt
   35         | cmpdstmt . ";" ifstmt
   36         | cmpdstmt . ";" whilestmt
   37         | cmpdstmt . ";" forstmt
   39 forstmt: "for" "(" decllist condition ";" cmpdstmt . ")" "{" cmpdstmt "}"

    ")"  shift, and go to state 95
    ";"  shift, and go to state 38


State 93

   26 ifstmt: "if" "(" condition ")" "{" cmpdstmt . "}"
   27       | "if" "(" condition ")" "{" cmpdstmt . "}" "else" "{" cmpdstmt "}"
   33 cmpdstmt: cmpdstmt . ";" assignstmt
   34         | cmpdstmt . ";" iostmt
   35         | cmpdstmt . ";" ifstmt
   36         | cmpdstmt . ";" whilestmt
   37         | cmpdstmt . ";" forstmt

    "}"  shift, and go to state 96
    ";"  shift, and go to state 38


State 94

   33 cmpdstmt: cmpdstmt . ";" assignstmt
   34         | cmpdstmt . ";" iostmt
   35         | cmpdstmt . ";" ifstmt
   36         | cmpdstmt . ";" whilestmt
   37         | cmpdstmt . ";" forstmt
   38 whilestmt: "while" "(" condition ")" "{" cmpdstmt . "}"

    "}"  shift, and go to state 97
    ";"  shift, and go to state 38


State 95

   39 forstmt: "for" "(" decllist condition ";" cmpdstmt ")" . "{" cmpdstmt "}"

    "{"  shift, and go to state 98


State 96

   26 ifstmt: "if" "(" condition ")" "{" cmpdstmt "}" .
   27       | "if" "(" condition ")" "{" cmpdstmt "}" . "else" "{" cmpdstmt "}"

    "else"  shift, and go to state 99

    $default  reduce using rule 26 (ifstmt)


State 97

   38 whilestmt: "while" "(" condition ")" "{" cmpdstmt "}" .

    $default  reduce using rule 38 (whilestmt)


State 98

   39 forstmt: "for" "(" decllist condition ";" cmpdstmt ")" "{" . cmpdstmt "}"

    "for"         shift, and go to state 1
    "cin"         shift, and go to state 2
    "cout"        shift, and go to state 3
    "if"          shift, and go to state 4
    "while"       shift, and go to state 5
    "identifier"  shift, and go to state 10

    assignstmt        go to state 15
    identifierstruct  go to state 17
    iostmt            go to state 18
    ifstmt            go to state 19
    cmpdstmt          go to state 100
    whilestmt         go to state 21
    forstmt           go to state 22


State 99

   27 ifstmt: "if" "(" condition ")" "{" cmpdstmt "}" "else" . "{" cmpdstmt "}"

    "{"  shift, and go to state 101


State 100

   33 cmpdstmt: cmpdstmt . ";" assignstmt
   34         | cmpdstmt . ";" iostmt
   35         | cmpdstmt . ";" ifstmt
   36         | cmpdstmt . ";" whilestmt
   37         | cmpdstmt . ";" forstmt
   39 forstmt: "for" "(" decllist condition ";" cmpdstmt ")" "{" cmpdstmt . "}"

    "}"  shift, and go to state 102
    ";"  shift, and go to state 38


State 101

   27 ifstmt: "if" "(" condition ")" "{" cmpdstmt "}" "else" "{" . cmpdstmt "}"

    "for"         shift, and go to state 1
    "cin"         shift, and go to state 2
    "cout"        shift, and go to state 3
    "if"          shift, and go to state 4
    "while"       shift, and go to state 5
    "identifier"  shift, and go to state 10

    assignstmt        go to state 15
    identifierstruct  go to state 17
    iostmt            go to state 18
    ifstmt            go to state 19
    cmpdstmt          go to state 103
    whilestmt         go to state 21
    forstmt           go to state 22


State 102

   39 forstmt: "for" "(" decllist condition ";" cmpdstmt ")" "{" cmpdstmt "}" .

    $default  reduce using rule 39 (forstmt)


State 103

   27 ifstmt: "if" "(" condition ")" "{" cmpdstmt "}" "else" "{" cmpdstmt . "}"
   33 cmpdstmt: cmpdstmt . ";" assignstmt
   34         | cmpdstmt . ";" iostmt
   35         | cmpdstmt . ";" ifstmt
   36         | cmpdstmt . ";" whilestmt
   37         | cmpdstmt . ";" forstmt

    "}"  shift, and go to state 104
    ";"  shift, and go to state 38


State 104

   27 ifstmt: "if" "(" condition ")" "{" cmpdstmt "}" "else" "{" cmpdstmt "}" .

    $default  reduce using rule 27 (ifstmt)
